--- a/android/compose-ui/BUILD.bazel
+++ b/android/compose-ui/BUILD.bazel
@@ -7,7 +7,7 @@ kt_android_library(
     ],
     custom_package = "pro.herlian.vihara.ui",
     manifest = "AndroidManifest.xml",
-    plugins = ["//:jetpack_compose_compiler_plugin"],
+    plugins = ["//android:jetpack_compose_compiler_plugin"],
     visibility = ["//visibility:public"],
     deps = [
         "@maven//:androidx_activity_activity_compose",
