--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -10,6 +10,10 @@ bazel_dep(name = "rules_jvm_external", version = "5.3")
 bazel_dep(name = "rules_android", version = "0.1.1")
 bazel_dep(name = "rules_kotlin", version = "1.9.0")
 
+bazel_dep(name = "rules_xcodeproj", version = "1.14.2")
+bazel_dep(name = "rules_apple", version = "3.1.1")
+bazel_dep(name = "rules_swift", version = "1.13.0")
+
 maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
 maven.install(
     artifacts = [
