--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -14,6 +14,9 @@ bazel_dep(name = "rules_xcodeproj", version = "1.14.2")
 bazel_dep(name = "rules_apple", version = "3.1.1")
 bazel_dep(name = "rules_swift", version = "1.13.0")
 
+bazel_dep(name = "rules_go", version = "0.44.0")
+bazel_dep(name = "gazelle", version = "0.35.0")
+
 maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
 maven.install(
     artifacts = [
@@ -33,3 +36,15 @@ maven.install(
     ],
 )
 use_repo(maven, "maven")
+
+go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
+go_sdk.download(version = "1.21.5")
+go_sdk.host()
+
+go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
+go_deps.from_file(go_mod = "//backend:go.mod")
+
+use_repo(
+    go_deps,
+    "com_github_gin_gonic_gin"
+)
