--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -11,10 +11,10 @@ bazel_dep(name = "rules_android", version = "0.1.1")
 bazel_dep(name = "rules_kotlin", version = "1.9.0")
 
 bazel_dep(name = "rules_xcodeproj", version = "1.14.2")
-bazel_dep(name = "rules_apple", version = "3.1.1")
+bazel_dep(name = "rules_apple", version = "3.1.1", repo_name = "build_bazel_rules_apple")
 bazel_dep(name = "rules_swift", version = "1.13.0")
 
-bazel_dep(name = "rules_go", version = "0.44.0")
+bazel_dep(name = "rules_go", version = "0.44.0", repo_name = "io_bazel_rules_go")
 bazel_dep(name = "gazelle", version = "0.35.0")
 
 maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
@@ -37,9 +37,18 @@ maven.install(
 )
 use_repo(maven, "maven")
 
-go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
+go_sdk = use_extension(
+    "@io_bazel_rules_go//go:extensions.bzl", 
+    "go_sdk"
+)
 go_sdk.download(version = "1.21.5")
-go_sdk.host()
+use_repo(
+    go_sdk,
+    "go_toolchains",
+    "io_bazel_rules_nogo"
+)
+
+register_toolchains("@go_toolchains//:all")
 
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
 go_deps.from_file(go_mod = "//backend:go.mod")
