--- a/backend/BUILD.bazel
+++ b/backend/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@rules_go//go:def.bzl", "go_binary", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 load("@gazelle//:def.bzl", "gazelle")
 
 # gazelle:prefix pro.herlian/vihara
