--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -55,5 +55,7 @@ go_deps.from_file(go_mod = "//backend:go.mod")
 
 use_repo(
     go_deps,
-    "com_github_gin_gonic_gin"
+    "com_github_gin_gonic_gin",
+    "com_github_golang_jwt_jwt_v5",
+    "com_github_lestrrat_go_jwx_v2",
 )
