--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -16,6 +16,7 @@ bazel_dep(name = "rules_swift", version = "1.13.0")
 
 bazel_dep(name = "rules_go", version = "0.44.0", repo_name = "io_bazel_rules_go")
 bazel_dep(name = "gazelle", version = "0.35.0")
+bazel_dep(name = "rules_proto", version = "6.0.0-rc1")
 
 maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
 maven.install(
@@ -58,4 +59,6 @@ use_repo(
     "com_github_gin_gonic_gin",
     "com_github_golang_jwt_jwt_v5",
     "com_github_lestrrat_go_jwx_v2",
+    "org_golang_google_grpc",
+    "org_uber_go_zap",
 )
