--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -12,7 +12,8 @@ bazel_dep(name = "rules_kotlin", version = "1.9.0")
 
 bazel_dep(name = "rules_xcodeproj", version = "1.14.2")
 bazel_dep(name = "rules_apple", version = "3.1.1", repo_name = "build_bazel_rules_apple")
-bazel_dep(name = "rules_swift", version = "1.13.0")
+bazel_dep(name = "rules_swift", version = "1.13.0", repo_name = "build_bazel_rules_swift")
+bazel_dep(name = "apple_support", version = "1.11.1", repo_name = "build_bazel_apple_support")
 
 bazel_dep(name = "rules_go", version = "0.44.0", repo_name = "io_bazel_rules_go")
 bazel_dep(name = "gazelle", version = "0.35.0")
