--- a/backend/services/serviceb/BUILD.bazel
+++ b/backend/services/serviceb/BUILD.bazel
@@ -3,7 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 go_library(
     name = "serviceb_lib",
     srcs = ["main.go"],
-    importpath = "pro.herlian/vihara/services/serviceb",
+    importpath = "pro.herlian.vihara/backend/services/serviceb",
     visibility = ["//visibility:private"],
     deps = [
         "//proto:servicea",
