--- a/ios/BUILD.bazel
+++ b/ios/BUILD.bazel
@@ -13,7 +13,7 @@ load(
     "apple_dynamic_xcframework_import",
     "local_provisioning_profile",
 )
-load("@rules_swift//swift:swift.bzl", "swift_library")
+load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
 load(":Extension.bzl", "ios_app", "team_id")
 
 xcodeproj(
@@ -51,15 +51,9 @@ swift_library(
     ],
     tags = ["manual"],
     deps = [
-        ":Alamofire",
         ":AppAuth",
+        "//proto:swift_servicea",
     ],
-)
-
-apple_dynamic_xcframework_import(
-    name = "Alamofire",
-    tags = ["manual"],
-    xcframework_imports = glob(["Carthage/Build/Alamofire.xcframework/**"]),
 )
 
 apple_dynamic_xcframework_import(
