--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -10,14 +10,20 @@ bazel_dep(name = "rules_jvm_external", version = "5.3")
 bazel_dep(name = "rules_android", version = "0.1.1")
 bazel_dep(name = "rules_kotlin", version = "1.9.0")
 
-bazel_dep(name = "rules_xcodeproj", version = "1.14.2")
-bazel_dep(name = "rules_apple", version = "3.1.1", repo_name = "build_bazel_rules_apple")
-bazel_dep(name = "rules_swift", version = "1.13.0", repo_name = "build_bazel_rules_swift")
-bazel_dep(name = "apple_support", version = "1.11.1", repo_name = "build_bazel_apple_support")
+bazel_dep(name = "rules_xcodeproj", version = "1.16.0")
+bazel_dep(name = "rules_apple", version = "3.3.0", repo_name = "build_bazel_rules_apple")
+bazel_dep(name = "rules_swift", version = "1.16.0", repo_name = "build_bazel_rules_swift")
+bazel_dep(name = "apple_support", version = "1.13.0", repo_name = "build_bazel_apple_support")
 
 bazel_dep(name = "rules_go", version = "0.44.0", repo_name = "io_bazel_rules_go")
 bazel_dep(name = "gazelle", version = "0.35.0")
 bazel_dep(name = "rules_proto", version = "6.0.0-rc1")
+
+bazel_dep(name = "aspect_rules_lint", version = "0.12.0")
+bazel_dep(name = "aspect_rules_js", version = "1.37.1")
+bazel_dep(name = "aspect_rules_swc", version = "1.1.0")
+bazel_dep(name = "aspect_rules_ts", version = "2.1.1")
+bazel_dep(name = "bazel_skylib", version = "1.5.0")
 
 maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
 maven.install(
@@ -63,3 +69,27 @@ use_repo(
     "org_golang_google_grpc",
     "org_uber_go_zap",
 )
+
+pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm", dev_dependency = True)
+use_repo(pnpm, "pnpm")
+
+npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
+npm.npm_translate_lock(
+    name = "npm",
+    npmrc = "//frontend:.npmrc",
+    pnpm_lock = "//frontend:pnpm-lock.yaml",
+    public_hoist_packages = {
+        "eslint-config-react-app": ["frontend/admin"],
+        "eslint@8.56": ["frontend/admin"],
+    },
+    verify_node_modules_ignored = "//:.bazelignore",
+)
+use_repo(npm, "npm")
+
+rules_ts_ext = use_extension(
+    "@aspect_rules_ts//ts:extensions.bzl",
+    "ext",
+    dev_dependency = True,
+)
+rules_ts_ext.deps()
+use_repo(rules_ts_ext, "npm_typescript")
