--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -6,7 +6,7 @@ _COMPOSE_COMPILER_VERSION = "1.5.3"
 
 _KOTLIN_COMPILER_VERSION = "1.9.10"
 
-bazel_dep(name = "rules_jvm_external", version = "5.3")
+bazel_dep(name = "rules_jvm_external", version = "6.0")
 bazel_dep(name = "rules_android", version = "0.1.1")
 bazel_dep(name = "rules_kotlin", version = "1.9.0")
 
@@ -14,10 +14,11 @@ bazel_dep(name = "rules_xcodeproj", version = "1.16.0")
 bazel_dep(name = "rules_apple", version = "3.3.0", repo_name = "build_bazel_rules_apple")
 bazel_dep(name = "rules_swift", version = "1.16.0", repo_name = "build_bazel_rules_swift")
 bazel_dep(name = "apple_support", version = "1.13.0", repo_name = "build_bazel_apple_support")
+bazel_dep(name = "rules_swift_package_manager", version = "0.28.0")
 
-bazel_dep(name = "rules_go", version = "0.44.0", repo_name = "io_bazel_rules_go")
+bazel_dep(name = "rules_go", version = "0.46.0", repo_name = "io_bazel_rules_go")
 bazel_dep(name = "gazelle", version = "0.35.0")
-bazel_dep(name = "rules_proto", version = "6.0.0-rc1")
+bazel_dep(name = "rules_proto", version = "6.0.0-rc2")
 
 bazel_dep(name = "aspect_rules_lint", version = "0.12.0")
 bazel_dep(name = "aspect_rules_js", version = "1.37.1")
@@ -68,6 +69,10 @@ use_repo(
     "com_github_lestrrat_go_jwx_v2",
     "org_golang_google_grpc",
     "org_uber_go_zap",
+    "org_golang_google_protobuf",
+    "com_github_jackc_pgx_v5",
+    "com_github_go_playground_validator_v10",
+    "com_github_joho_godotenv",
 )
 
 pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm", dev_dependency = True)
@@ -93,3 +98,17 @@ rules_ts_ext = use_extension(
 )
 rules_ts_ext.deps()
 use_repo(rules_ts_ext, "npm_typescript")
+
+# swift_deps START
+swift_deps = use_extension(
+    "@rules_swift_package_manager//:extensions.bzl",
+    "swift_deps",
+)
+swift_deps.from_file(
+    deps_index = "//ios:swift_deps_index.json",
+)
+use_repo(
+    swift_deps,
+    "swiftpkg_googlesignin_ios",
+)
+# swift_deps END
