--- a/ios/Tests/BUILD.bazel
+++ b/ios/Tests/BUILD.bazel
@@ -1,10 +1,10 @@
 load("@build_bazel_rules_swift//swift:swift.bzl", "swift_test")
 
 swift_test(
-    name = "Test",
+    name = "Tests",
     testonly = True,
     srcs = glob(["*.swift"]),
-    module_name = "test",
+    module_name = "tests",
     tags = ["manual"],
     visibility = ["//visibility:public"],
 )
