--- a/android/feature/auth/src/main/AndroidManifest.xml
+++ b/android/feature/auth/src/main/AndroidManifest.xml
@@ -14,8 +14,8 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<manifest package="pro.herlian.vihara.feature.auth" xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<manifest package="pro.herlian.vihara.feature.auth"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <application>
         <activity android:name=".AuthActivity" android:exported="false">
             <intent-filter>
